[package]
name = "card_emu"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
panic-halt = "1.0.0"
pio = "0.3.0"
pio-proc = "0.3.0"
rp235x-hal = { version = "0.3.0", features = ["binary-info", "critical-section-impl"], git = "https://github.com/rp-rs/rp-hal.git" }
usb-device = "0.3.2"

[dev-dependencies]
cortex-m-rt = "0.7.5"

[build-dependencies]
anyhow = "1.0.100"
